--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -89,6 +91,7 @@
     "litefs-js": "^1.1.2",
     "lru-cache": "^10.2.2",
     "morgan": "^1.10.0",
+    "papaparse": "^5.4.1",
     "prisma": "^5.13.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
@@ -132,6 +135,7 @@
     "@types/glob": "^8.1.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
+    "@types/papaparse": "^5.3.14",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
