chore: config tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,13 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - 5441:5432
+  db_test:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_DB: vitest
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - 5499:5432
+
