--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 LITEFS_DIR="/litefs/data"
-DATABASE_URL="postgresql://postgres:postgres@localhost:5440/jusmemoriza-dev?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5499/vitest?schema=public"
 CACHE_DATABASE_PATH="./other/cache.db"
 SESSION_SECRET="super-duper-s3cret"
 HONEYPOT_SECRET="super-duper-s3cret"
