--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.17",
+    "@react-spring/web": "^9.7.3",
     "@remix-run/express": "2.9.1",
     "@remix-run/node": "2.9.1",
     "@remix-run/react": "2.9.1",
@@ -78,6 +80,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.1.3",
     "eslint-plugin-remix-react-routes": "^1.0.5",
     "execa": "^8.0.1",
     "express": "^4.19.2",
@@ -89,6 +92,7 @@
     "intl-parse-accept-language": "^1.0.0",
     "isbot": "^5.1.6",
     "litefs-js": "^1.1.2",
+    "localforage": "^1.10.0",
     "lru-cache": "^10.2.2",
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
