--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^9.6.0",
     "chalk": "^5.3.0",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "close-with-grace": "^1.3.0",
     "clsx": "^2.1.1",
@@ -99,6 +100,7 @@
     "prisma": "^5.13.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "remix-auth": "^3.6.0",
