--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ GOOGLE_CLIENT_ID="MOCK_GOOGLE_CLIENT_ID"
 GOOGLE_CLIENT_SECRET="MOCK_GOOGLE_CLIENT_SECRET"
 GOOGLE_TOKEN="MOCK_GOOGLE_TOKEN"
 
+# hotmart tokens
+HOTMART_WEBHOOK_TOKEN="super-duper-s3cret"
+
 # set this to false to prevent search engines from indexing the website
 # default to allow indexing for seo safety
 ALLOW_INDEXING="true"
