--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "embla-carousel-react": "^8.1.3",
     "eslint-plugin-remix-react-routes": "^1.0.5",
     "execa": "^8.0.1",
@@ -100,6 +101,7 @@
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
     "prisma": "^5.13.0",
+    "puppeteer": "^22.15.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
