--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.17",
+    "@react-pdf/renderer": "^3.4.2",
     "@react-spring/web": "^9.7.3",
     "@remix-run/express": "2.9.1",
     "@remix-run/node": "2.9.1",
@@ -83,7 +84,6 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
     "embla-carousel-react": "^8.1.3",
     "eslint-plugin-remix-react-routes": "^1.0.5",
     "execa": "^8.0.1",
@@ -101,11 +101,11 @@
     "morgan": "^1.10.0",
     "papaparse": "^5.4.1",
     "prisma": "^5.13.0",
-    "puppeteer": "^22.15.0",
     "qrcode": "^1.5.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-pdf-html": "^2.0.5",
     "react-quill": "^2.0.0",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.5.0",
@@ -171,6 +171,10 @@
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vitest": "^1.5.3"
+  },
+  "overrides": {
+    "@react-pdf/pdfkit": "3.1.0",
+    "@react-pdf/layout": "3.11.5"
   },
   "engines": {
     "node": "20"
